# repops

./: .gitignore  LICENSE  README.md  config_sample.yaml  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: python.instructions.md
.github/prompts/: analyze-requirements.prompt.md
docs/: requirements.md  roadmap.md
examples/config/: repos.yml
repops/: __init__.py  __main__.py  cli.py
repops/config/: config_loader.py
repops/core/: repository.py
repops/languages/: base.py  javascript.py  python.py
repops/operations/: base.py  git.py  github.py
repops/pipelines/: pipeline.py
src/repops/: __init__.py
src/repops/cli/: __init__.py  main.py
src/repops/config/: manager.py
src/repops/core/: __init__.py  app.py
src/repops/exceptions/: __init__.py  exceptions.py
src/repops/models/: __init__.py  repository.py
tests/: test_pipeline.py  test_repository.py
